--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li>Real-time gameplay with WebSocket support</li>
             <li>Team-based rounds with collaborative gameplay</li>
             <li>Dynamic scoring system with streak-based rewards</li>
-            <li>Responsive UI for smooth mobile and desktop experiences</li>
+            <li>Responsive UI for a smooth experiences</li>
         </ul>
     </section>
 
@@ -58,7 +58,6 @@
         <ul>
             <li>AI-powered opponent for single-player mode</li>
             <li>Advanced player statistics and team ranking</li>
-            <li>Customizable avatars and user profiles</li>
             <li>Additional game modes, such as timed rounds or extended play options</li>
         </ul>
     </section>
