--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li>Team-based rounds with collaborative gameplay</li>
             <li>Dynamic scoring system with streak-based rewards</li>
             <li>Responsive UI for a smooth experiences</li>
+            <li>Minimized Docker containers using a multistage build</li>
         </ul>
     </section>
 
