--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
             <li>Team-based rounds with collaborative gameplay</li>
             <li>Dynamic scoring system with streak-based rewards</li>
             <li>Responsive UI for a smooth experiences</li>
-            <li>Minimized Docker containers using a multistage build</li>
         </ul>
     </section>
 
@@ -71,6 +70,7 @@
             <li>WebSocket server for real-time game state updates</li>
             <li>Responsive design for a seamless user experience across devices</li>
             <li>Secure deployment on Azure with HTTPS support</li>
+            <li>Minimized Docker container using a multistage build</li>
         </ul>
     </section>
 
