--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li>WebSocket server for real-time game state updates</li>
             <li>Responsive design for a seamless user experience across devices</li>
             <li>Secure deployment on Azure with HTTPS support</li>
-            <li>Minimized Docker container using a multistage build</li>
+            <li>Minimized Docker container size using a multistage build</li>
         </ul>
     </section>
 
